--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ src="https://www.facebook.com/tr?id=1196881612048349&ev=PageView&noscript=1"
     <div class="row h-100">
         <div class="col-md-6 mx-auto text-center">
             <h2 class="header">ASIA'S NO1 TIPPER </h2>
-            <h1 class="main"><i class="fa-solid fa-crown" style="color: rgba(246, 198, 7, 0.947);"></i> Vicky Cricket <i class="fa-solid fa-crown"  style="color: rgba(246, 198, 7, 0.947);"></i></h1>
+            <h1 class="main"><i class="fa-solid fa-crown" style="color: rgba(246, 198, 7, 0.947);"></i> Somesh Thakre <i class="fa-solid fa-crown"  style="color: rgba(246, 198, 7, 0.947);"></i></h1>
             <a href="https://t.me/+k9jVcfo2xgFlOWM9" target="_blank" class="whatsapp-button">
                 <i class="fa-brands fa-telegram"></i>  
                 JOIN NOW FOR FREE
