--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@ src="https://www.facebook.com/tr?id=542722258633351&ev=PageView&noscript=1"
                 <i class="fa-brands fa-telegram"></i>  
                 JOIN NOW FOR FREE
             </a>             
-            <h4 class="otherDataMain"> <i class="fa-solid fa-bolt"  style="color: rgba(246, 198, 7, 0.947);"></i> BACK-TO-BACK 60/60 PASS <i class="fa-solid fa-bolt"  style="color: rgba(246, 198, 7, 0.947);"></i></h4>
+            <h4 class="otherDataMain"> <i class="fa-solid fa-bolt"  style="color: rgba(246, 198, 7, 0.947);"></i> BACK-TO-BACK 60/60 PASS 2024 IPL <i class="fa-solid fa-bolt"  style="color: rgba(246, 198, 7, 0.947);"></i></h4>
             <h4 class="otherData"> <i class="fa-solid fa-bolt"  style="color: rgba(246, 198, 7, 0.947);"></i> IPL 69/73 Match Pass <i class="fa-solid fa-bolt"  style="color: rgba(246, 198, 7, 0.947);"></i></h4>            
-            <h4 class="otherData"><i class="fa-solid fa-bolt"  style="color: rgba(246, 198, 7, 0.947);"></i> CPL 21/23 Match Pass  <i class="fa-solid fa-bolt"  style="color: rgba(246, 198, 7, 0.947);"></i></h4>                                    
+            <h4 class="otherDataMain"> <i class="fa-solid fa-bolt"  style="color: rgba(246, 198, 7, 0.947);"></i> BACK-TO-BACK 25/25 PASS 2025 IPL <i class="fa-solid fa-bolt"  style="color: rgba(246, 198, 7, 0.947);"></i></h4>            
+            <h4 class="otherData"><i class="fa-solid fa-bolt"  style="color: rgba(246, 198, 7, 0.947);"></i> IPL 2025 29/30 Match Pass  <i class="fa-solid fa-bolt"  style="color: rgba(246, 198, 7, 0.947);"></i></h4>                                    
             <h4 class="otherData"><i class="fa-solid fa-bolt"  style="color: rgba(246, 198, 7, 0.947);"></i> Full PSL Free TOSS, MATCH & SESSION REPORT <i class="fa-solid fa-bolt"  style="color: rgba(246, 198, 7, 0.947);"></i></h4>                        
 
             <a href="https://t.me/+k9jVcfo2xgFlOWM9" target="_blank" class="whatsapp-button">
